--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.9.1"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.1",
+    "validator": "^13.9.0"
   }
 }
